--- a/stylesheets/base.scss
+++ b/stylesheets/base.scss
@@ -145,6 +145,9 @@ nav {
 section {
   padding: 25px 0;
 }
+footer {
+  padding-top: 185px;
+}
 .mail-signup #mc_embed_signup #mc_embed_signup_scroll label[for=mce-EMAIL] {
   display: block;
   font-size: modular-scale(0);
@@ -153,8 +156,3 @@ section {
   width: auto;
   font-weight: normal;
 }
-
-
-
-
-
