--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -64,8 +64,7 @@ li {
   font-family: Roboto, sans-serif;
   font-size: 1em;
   font-weight: 400;
-  color: black;
-  padding-bottom: 30px; }
+  color: black; }
 
 ul {
   font-family: Roboto, sans-serif;
