Mobile and desktop styled timeline

--- a/stylesheets/timeline_1px.scss
+++ b/stylesheets/timeline_1px.scss
@@ -1,5 +1,5 @@
+.key-dates { position: relative;}
 .key-date {
-
     h4 {
       height:15px;
       width:125px;
@@ -54,7 +54,7 @@
 .line {
   z-index:0;
   position: absolute;
-  top: 3069px;
+  top: 110px;
   left: 50%;
   height: 585px;
   width: 3.5px;
