--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -298,6 +298,9 @@ footer {
     footer:last-child {
       margin-right: 0; }
 
+  .key-dates {
+    position: relative; }
+
   .key-date {
     display: block; }
     .key-date h4 {
@@ -343,7 +346,7 @@ footer {
   .line {
     z-index: 0;
     position: absolute;
-    top: 3069px;
+    top: 110px;
     left: 50%;
     height: 585px;
     width: 3.5px;
@@ -481,7 +484,7 @@ footer {
   .line {
     z-index: 0;
     position: absolute;
-    top: 2071px;
+    top: 155px;
     left: auto;
     height: 3.5px;
     width: 915px;
