--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -293,14 +293,14 @@ section {
       margin-right: 0; }
 
   .nav-bar {
-    background-color: rgba(0, 0, 0, 0.7);
-    top: 0px;
-    left: 0px;
-    position: fixed;
     float: left;
     display: block;
     margin-right: 2.35765%;
-    width: 100%; }
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    top: 0px;
+    left: 0px;
+    position: fixed; }
     .nav-bar:last-child {
       margin-right: 0; }
     .nav-bar::after {
