--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,78 +1,543 @@
-/*
-Error: Invalid CSS after "<<<<<<< HEAD": expected "{", was "}"
-        on line 163 of base.scss
-        from line 3 of style.scss
+html {
+  box-sizing: border-box; }
 
-158:   font-family: $font;
-159:   text-align: center;
-160:   width: auto;
-161:   font-weight: normal;
-162: <<<<<<< HEAD
-163: }
-164: 
-165: 
-166: =======
-167: }
-168: >>>>>>> dh-style-timeline
+*, *::after, *::before {
+  box-sizing: inherit; }
 
-Backtrace:
-base.scss:163
-style.scss:3
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/scss/parser.rb:1162:in `expected'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/scss/parser.rb:1098:in `expected'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/scss/parser.rb:1093:in `tok!'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/scss/parser.rb:638:in `block'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/scss/parser.rb:708:in `declaration_or_ruleset'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/scss/parser.rb:658:in `block_child'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/scss/parser.rb:650:in `block_contents'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/scss/parser.rb:639:in `block'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/scss/parser.rb:632:in `ruleset'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/scss/parser.rb:657:in `block_child'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/scss/parser.rb:650:in `block_contents'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/scss/parser.rb:117:in `stylesheet'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/scss/parser.rb:42:in `parse'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/engine.rb:403:in `_to_tree'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/engine.rb:309:in `to_tree'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:323:in `block in visit_import'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/stack.rb:88:in `block in with_import'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/stack.rb:115:in `with_frame'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/stack.rb:88:in `with_import'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:322:in `visit_import'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/stack.rb:79:in `block in with_base'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/stack.rb:115:in `with_frame'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/stack.rb:79:in `with_base'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:52:in `map'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:157:in `visit'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/engine.rb:378:in `_render_with_sourcemap'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/engine.rb:295:in `render_with_sourcemap'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:490:in `update_stylesheet'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:209:in `each'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:470:in `on_file_changed'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:328:in `block in watch'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/listen-2.10.0/lib/listen/listener.rb:291:in `call'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/listen-2.10.0/lib/listen/listener.rb:291:in `_process_changes'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/listen-2.10.0/lib/listen/listener.rb:255:in `block in _wait_for_changes'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/listen-2.10.0/lib/listen/listener.rb:238:in `loop'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/listen-2.10.0/lib/listen/listener.rb:238:in `_wait_for_changes'
-/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/listen-2.10.0/lib/listen/listener.rb:327:in `block in _start_wait_thread'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \"<<<<<<< HEAD\": expected \"{\", was \"}\"\A         on line 163 of base.scss\A         from line 3 of style.scss\A \A 158:   font-family: $font;\A 159:   text-align: center;\A 160:   width: auto;\A 161:   font-weight: normal;\A 162: <<<<<<< HEAD\A 163: }\A 164: \A 165: \A 166: =======\A 167: }\A 168: >>>>>>> dh-style-timeline"; }
+.long-button {
+  display: inline-block;
+  background-color: #16DDA4;
+  cursor: pointer;
+  color: white;
+  font-family: 100% Roboto, sans-serif;
+  font-size: 1em;
+  padding: 8px 84px;
+  text-decoration: none;
+  border: none;
+  margin-bottom: 15px; }
+
+a {
+  color: white;
+  text-decoration: none; }
+
+h1 {
+  font-family: Roboto, sans-serif;
+  font-size: 2.36859em;
+  font-weight: 500;
+  color: white; }
+
+h2 {
+  font-family: Roboto, sans-serif;
+  font-size: 1.333em;
+  font-weight: 300;
+  color: black; }
+  h2:after {
+    content: ' ';
+    max-width: initial;
+    display: block;
+    height: 6px;
+    width: 33px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    background-color: #16DDA4; }
+
+h3 {
+  font-family: Roboto, sans-serif;
+  font-size: 1em;
+  font-weight: 600;
+  color: black; }
+
+h4 {
+  font-family: Roboto, sans-serif;
+  font-size: 0.75019em;
+  font-weight: 300;
+  color: black; }
+
+p {
+  font-family: Roboto, sans-serif;
+  font-size: 1em;
+  font-weight: 400;
+  color: black; }
+
+li {
+  font-family: Roboto, sans-serif;
+  font-size: 1em;
+  font-weight: 400;
+  color: black;
+  padding-bottom: 30px; }
+
+ul {
+  font-family: Roboto, sans-serif;
+  font-size: 1em;
+  font-weight: 400;
+  color: black; }
+
+nav {
+  float: right; }
+  nav ul {
+    font-family: Roboto, sans-serif;
+    font-size: 0.75019em;
+    white-space: nowrap;
+    height: 1em;
+    width: 100%; }
+  nav li {
+    display: inline;
+    float: left;
+    padding-left: 25px; }
+    nav li:after {
+      content: ' ';
+      display: inline-block;
+      height: 15px;
+      width: 3px;
+      margin-left: 20px;
+      background-color: #16DDA4; }
+  nav li:first-child {
+    padding-left: 0px; }
+  nav li:last-child {
+    padding-right: 28px; }
+  nav li:last-child:after {
+    content: " ";
+    width: 0px;
+    margin-left: 0px; }
+
+.application-steps ol {
+  list-style: none;
+  counter-reset: my-awesome-counter; }
+  .application-steps ol li {
+    margin-left: 10px;
+    padding: 0px;
+    counter-increment: my-awesome-counter;
+    margin-bottom: 10px;
+    border-bottom: 1px solid white;
+    line-height: 22px; }
+    .application-steps ol li h3 {
+      margin: 0;
+      display: inline-block; }
+    .application-steps ol li p {
+      margin-top: 5px;
+      padding-left: 12px; }
+  .application-steps ol li:before {
+    content: counter(my-awesome-counter);
+    line-height: 30px;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0px 12px 0px -35px;
+    width: 35px;
+    text-align: center;
+    border-radius: 1in;
+    border: 1.5px solid #16DDA4;
+    font-weight: 900;
+    background-color: white; }
+
+.hero-blurb p {
+  color: white; }
+
+section {
+  padding: 25px 0; }
+
+footer {
+  padding-top: 185px; }
+
+.mail-signup #mc_embed_signup #mc_embed_signup_scroll label[for=mce-EMAIL] {
+  display: block;
+  font-size: 1em;
+  font-family: Roboto, sans-serif;
+  text-align: center;
+  width: auto;
+  font-weight: normal; }
+
+header::after {
+  clear: both;
+  content: "";
+  display: table; }
+
+.logo {
+  float: left; }
+
+.hero {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 100%;
+  background-image: url("http://c8.alamy.com/comp/ACEFAG/saddle-tackle-shed-background-low-opacity-bw-ACEFAG.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  padding-top: 15%; }
+  .hero:last-child {
+    margin-right: 0; }
+  .hero p h1 {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 100%; }
+    .hero p h1:last-child {
+      margin-right: 0; }
+  .hero h1 {
+    color: white; }
+  .hero .hero-blurb {
+    max-width: 68em;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding-right: 20%;
+    padding-left: 20%;
+    padding-bottom: 75px; }
+    .hero .hero-blurb::after {
+      clear: both;
+      content: "";
+      display: table; }
+
+.image-blurb {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 48.82117%;
+  text-align: center; }
+  .image-blurb:last-child {
+    margin-right: 0; }
+  .image-blurb:nth-child(2n) {
+    margin-right: 0; }
+  .image-blurb:nth-child(2n+1) {
+    clear: left; }
+
+.curriculum-blurbs {
+  max-width: 68em;
+  margin-left: auto;
+  margin-right: auto; }
+  .curriculum-blurbs::after {
+    clear: both;
+    content: "";
+    display: table; }
+
+.mail-signup #mc_embed_signup {
+  text-align: center;
+  width: auto; }
+
+button {
+  width: 200px; }
+
+section {
+  max-width: 68em;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 58em; }
+  section::after {
+    clear: both;
+    content: "";
+    display: table; }
+
+h1, h2 {
+  text-align: center; }
+
+.eligibility {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 100%; }
+  .eligibility:last-child {
+    margin-right: 0; }
+
+.application-steps {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 100%; }
+  .application-steps:last-child {
+    margin-right: 0; }
+
+.mail-signup #mc_embed_signup #input-box input[type="email"] {
+  font-family: Roboto, sans-serif;
+  font-size: 1em;
+  display: block;
+  margin: 0;
+  box-shadow: none;
+  border-radius: none;
+  padding-top: 5.5px;
+  margin-top: 4.5px;
+  margin-left: 30px;
+  margin-right: auto;
+  width: 250px;
+  float: left;
+  padding: 9.5px; }
+
+.short-button {
+  padding: 6.5px 27px;
+  margin-right: auto;
+  margin-left: -60px;
+  display: inline-block;
+  background-color: #16DDA4;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Roboto, sans-serif;
+  font-size: 1.333em;
+  text-decoration: none;
+  border: none;
+  bottom: 1000px;
+  margin-top: 4.5px;
+  margin-right: -11px; }
+
+/*  padding:6.5px 26px;*/
+footer {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 100%;
+  text-align: center; }
+  footer:last-child {
+    margin-right: 0; }
+
+.nav-bar {
+  background-color: rgba(0, 0, 0, 0.7);
+  top: 0px;
+  left: 0px;
+  position: fixed;
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 100%; }
+  .nav-bar:last-child {
+    margin-right: 0; }
+  .nav-bar::after {
+    clear: both;
+    content: "";
+    display: table; }
+
+nav {
+  text-align: right;
+  padding-right: 15px;
+  float: right; }
+  nav ul {
+    font-family: Roboto, sans-serif;
+    font-size: 0.75019em;
+    white-space: nowrap;
+    height: 1em;
+    width: 100%; }
+  nav li {
+    display: inline;
+    float: left;
+    padding-left: 25px;
+    display: inline; }
+    nav li a {
+      color: white; }
+    nav li a:hover {
+      color: #16DDA4; }
+    nav li:first-child {
+      padding-left: 0px; }
+    nav li:last-child {
+      padding-right: 28px; }
+    nav li:last-child:after {
+      content: " ";
+      width: 0px;
+      margin-left: 0px; }
+    nav li:after {
+      content: ' ';
+      display: inline-block;
+      height: 15px;
+      width: 3px;
+      margin-left: 20px;
+      background-color: #16DDA4; }
+
+.key-dates {
+  position: relative; }
+
+.key-date {
+  display: block; }
+  .key-date h4 {
+    height: 15px;
+    width: 125px;
+    background-color: white; }
+  .key-date h3 {
+    height: 30px;
+    width: 135px;
+    background-color: white;
+    margin-top: 50px; }
+  .key-date#dot1 {
+    margin-top: -1px; }
+  .key-date#dot2 {
+    margin-top: 35px; }
+  .key-date#dot3 {
+    margin-top: 65px; }
+  .key-date#dot4 {
+    margin-top: 150px; }
+  .key-date h3 {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center; }
+    .key-date h3:after {
+      content: ' ';
+      margin-top: 10px;
+      z-index: 1;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 0px;
+      position: relative;
+      text-align: center;
+      display: block;
+      height: 15px;
+      width: 15px;
+      border-radius: 50%;
+      background-color: black; }
+  .key-date h4 {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center; }
+
+.line {
+  z-index: 0;
+  position: absolute;
+  top: 110px;
+  left: 50%;
+  height: 585px;
+  width: 3.5px;
+  background-color: #16DDA4; }
+
+.timeline {
+  position: relative; }
+
+@media screen and (min-width: 990px) {
+  section.overview .image-blurb {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 23.23176%; }
+    section.overview .image-blurb:nth-child(1n) {
+      margin-right: 2.35765%; }
+    section.overview .image-blurb:nth-child(1n+1) {
+      clear: none; }
+    section.overview .image-blurb:last-child {
+      margin-right: 0; }
+
+  nav ul li {
+    display: inline; }
+
+  section.curriculum .image-blurb {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 31.76157%; }
+    section.curriculum .image-blurb:nth-child(1n) {
+      margin-right: 2.35765%; }
+    section.curriculum .image-blurb:nth-child(1n+1) {
+      clear: none; }
+    section.curriculum .image-blurb:last-child {
+      margin-right: 0; }
+    section.curriculum .image-blurb:nth-child(3n) {
+      margin-right: 0; }
+    section.curriculum .image-blurb:nth-child(3n+1) {
+      clear: left; }
+
+  .eligibility {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 48.82117%; }
+    .eligibility:last-child {
+      margin-right: 0; }
+
+  .application-steps {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 48.82117%; }
+    .application-steps:last-child {
+      margin-right: 0; }
+
+  .mail-signup #mc_embed_signup #input-box input[type="email"] {
+    font-family: Roboto, sans-serif;
+    font-size: 1em;
+    display: block;
+    margin: 0;
+    padding-top: 6.5px;
+    padding-bottom: 10px;
+    width: 60%;
+    box-shadow: none;
+    border-radius: none;
+    float: left;
+    margin-top: 4px;
+    margin-left: 160px;
+    margin-right: auto;
+    webkit-appearance: none;
+    border: 1px solid #999; }
+
+  .short-button {
+    display: inline-block;
+    background-color: #16DDA4;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: 100% Roboto, sans-serif;
+    font-size: 1.333em;
+    padding: 6.5px 26px;
+    padding-bottom: 4px;
+    text-decoration: none;
+    border: none;
+    bottom: 1000px;
+    margin-top: 4px;
+    margin-right: 91px;
+    border-top-style: none; }
+
+  .long-button {
+    width: 300px; }
+
+  .key-date {
+    position: absolute;
+    display: inline-block; }
+    .key-date h4 {
+      margin-top: 35px; }
+    .key-date#dot1 {
+      left: 0%;
+      top: 55%; }
+    .key-date#dot2 {
+      left: 19%;
+      top: 7%; }
+    .key-date#dot3 {
+      left: 37%;
+      top: -32%; }
+    .key-date#dot4 {
+      left: 88%;
+      top: -143%; }
+    .key-date::after {
+      clear: both;
+      content: "";
+      display: table; }
+    .key-date h3 {
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center; }
+      .key-date h3:after {
+        content: ' ';
+        margin-top: 15px;
+        z-index: 1;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+        text-align: center;
+        display: block;
+        height: 15px;
+        width: 15px;
+        border-radius: 50%;
+        background-color: black; }
+    .key-date h4 {
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center; }
+
+  .line {
+    z-index: 0;
+    position: absolute;
+    top: 155px;
+    left: auto;
+    height: 3.5px;
+    width: 915px;
+    background-color: #16DDA4; }
+
+  .timeline {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 100%;
+    position: relative; }
+    .timeline:last-child {
+      margin-right: 0; } }
+
+/*# sourceMappingURL=style.css.map */
