--- a/stylesheets/nav_desktop.scss
+++ b/stylesheets/nav_desktop.scss
@@ -1,35 +1,23 @@
-.nav-bar {
-  @include span-columns(12);
-  @include clearfix;
-  z-index: 9;
-  background-color: rgba(0, 0, 0, .7);
-  top: 0px;
-  left: 0px;
-  position: fixed;
-} 
 nav {
-  text-align:right;
-
-  float: right;
   ul { 
     font-family: $font;
-    font-size: 8px;
+    font-size: 14px;
     white-space:nowrap;
     height: 1em;
     width: 100%;
   }
   li {
+    margin-left: 20px;
     display: inline;
     float: left;
-
     display: inline;
     a { 
       color: white; 
-      padding-left: 5px;
-      padding-right: 5px;
-  }
+      padding-left: 20px;
+      padding-right: 20px;
+    }
     a:hover { color:$green; }
-    &:first-child { padding-left: -10px; }
+    &:first-child { padding-left: 0px; }
     &:last-child { padding-right: 28px; }
     &:last-child:after {
       content: " ";
@@ -39,9 +27,10 @@ nav {
     &:after {
       content: ' ';
       display: inline-block;
-      height: 8px;
+      height: 15px;
       width: 3px;
       background-color: $green;
     }
   }
 }
+.nav-bar .logo img { width:120px;  }
