--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -5,8 +5,10 @@
 @import "layout_1px";
 @import "nav_1px";
 @import "timeline_1px";
+@import "footer_1px";
 
 @media screen and (min-width: 990px) {
   @import "layout_desktop";
   @import "timeline_desktop";
+  @import "footer_desktop";
 }
