--- a/stylesheets/layout_1px.scss
+++ b/stylesheets/layout_1px.scss
@@ -61,16 +61,17 @@ p {
 .eligibility {
   @include span-columns(12);
   h3 {
-    margin-left: 115px;
-    margin-right: 30px;
+    text-align: center;
   }
   ul li { 
-    margin-left: 85px;
+    margin-left: 40px;
     margin-right: 70px;
+    padding-bottom: 30px;
   } 
   p {
     margin-left: 42px;
     margin-right: 20px;
+    text-align: center;
   }
   .long-button {
     margin-top: 18px;
