--- a/stylesheets/layout_desktop.scss
+++ b/stylesheets/layout_desktop.scss
@@ -21,23 +21,28 @@ section.curriculum .image-blurb {
 .eligibility {
   @include span-columns(6);
   h3 {
-    margin-left: 132px;
-    margin-right: 30px;
+    text-align: left;
   }
-  ul li { 
-    margin-left: 135px;
-    margin-right: 70px;
+  ul {
+    margin-left: -20px;
+    li { 
+      margin-left: 0px;
+      margin-right: 0px;
+      padding-left: 20px;
+    }
   } 
   p {
-    margin-left: 132px;
-    margin-right: 50px;
-    text-align: none;
+    margin-left: -18px;
+    margin-right: 70px;
+    text-align: initial;
+    padding-left: 20px;
   }
   .long-button {
     margin-top: 18px;
     padding-right:10px;
     padding-left:10px;
-    margin-left: 136px;
+    margin-left: 5px;
+    padding-left: 20px;
   }
 }
 .application-steps {
