--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -258,14 +258,15 @@ p {
   .eligibility:last-child {
     margin-right: 0; }
   .eligibility h3 {
-    margin-left: 115px;
-    margin-right: 30px; }
+    text-align: center; }
   .eligibility ul li {
-    margin-left: 85px;
-    margin-right: 70px; }
+    margin-left: 40px;
+    margin-right: 70px;
+    padding-bottom: 30px; }
   .eligibility p {
     margin-left: 42px;
-    margin-right: 20px; }
+    margin-right: 20px;
+    text-align: center; }
   .eligibility .long-button {
     margin-top: 18px;
     padding-right: 10px;
@@ -482,20 +483,24 @@ footer a {
     .eligibility:last-child {
       margin-right: 0; }
     .eligibility h3 {
-      margin-left: 132px;
-      margin-right: 30px; }
-    .eligibility ul li {
-      margin-left: 135px;
-      margin-right: 70px; }
+      text-align: left; }
+    .eligibility ul {
+      margin-left: -20px; }
+      .eligibility ul li {
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 20px; }
     .eligibility p {
-      margin-left: 132px;
-      margin-right: 50px;
-      text-align: none; }
+      margin-left: -18px;
+      margin-right: 70px;
+      text-align: initial;
+      padding-left: 20px; }
     .eligibility .long-button {
       margin-top: 18px;
       padding-right: 10px;
       padding-left: 10px;
-      margin-left: 136px; }
+      margin-left: 5px;
+      padding-left: 20px; }
 
   .application-steps {
     float: left;
