--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -302,6 +302,13 @@ footer {
   top: 0px;
   left: 0px;
   position: fixed; }
+  .nav-bar .logo {
+    width: 100%;
+    text-align: center; }
+    .nav-bar .logo p {
+      color: #16DDA4;
+      font-size: 8px;
+      margin-right: 0px; }
   .nav-bar:last-child {
     margin-right: 0; }
   .nav-bar::after {
@@ -310,14 +317,26 @@ footer {
     display: table; }
 
 nav {
+  display: block;
   text-align: right;
-  float: right; }
+  padding-bottom: 10px; }
+  nav::after {
+    clear: both;
+    content: "";
+    display: table; }
+  nav::after {
+    clear: both;
+    content: "";
+    display: table; }
   nav ul {
     font-family: Roboto, sans-serif;
     font-size: 8px;
-    white-space: nowrap;
     height: 1em;
     width: 100%; }
+    nav ul::after {
+      clear: both;
+      content: "";
+      display: table; }
   nav li {
     display: inline;
     float: left;
@@ -330,8 +349,6 @@ nav {
       color: #16DDA4; }
     nav li:first-child {
       padding-left: -10px; }
-    nav li:last-child {
-      padding-right: 28px; }
     nav li:last-child:after {
       content: " ";
       width: 0px;
@@ -591,39 +608,46 @@ footer a {
     footer a img {
       height: 60px; }
 
-  nav ul {
-    font-family: Roboto, sans-serif;
-    font-size: 14px;
-    white-space: nowrap;
-    height: 1em;
-    width: 100%; }
-  nav li {
-    margin-left: 20px;
-    display: inline;
-    float: left;
-    display: inline; }
-    nav li a {
-      color: white;
-      padding-left: 20px;
-      padding-right: 20px; }
-    nav li a:hover {
-      color: #16DDA4; }
-    nav li:first-child {
-      padding-left: 0px; }
-    nav li:last-child {
-      padding-right: 28px; }
-    nav li:last-child:after {
-      content: " ";
-      width: 0px;
-      margin-left: 0px; }
-    nav li:after {
-      content: ' ';
-      display: inline-block;
-      height: 15px;
-      width: 3px;
-      background-color: #16DDA4; }
+  .nav-bar .logo {
+    width: auto;
+    padding-left: 30px; }
+    .nav-bar .logo p {
+      color: #16DDA4;
+      font-size: 14px;
+      margin-right: 0px; }
 
-  .nav-bar .logo img {
-    width: 120px; } }
+  nav {
+    float: right; }
+    nav ul {
+      font-family: Roboto, sans-serif;
+      font-size: 14px;
+      white-space: nowrap;
+      height: 1em;
+      width: 100%; }
+    nav li {
+      margin-left: 20px;
+      display: inline;
+      float: left;
+      display: inline; }
+      nav li a {
+        color: white;
+        padding-left: 20px;
+        padding-right: 20px; }
+      nav li a:hover {
+        color: #16DDA4; }
+      nav li:first-child {
+        padding-left: 0px; }
+      nav li:last-child {
+        padding-right: 28px; }
+      nav li:last-child:after {
+        content: " ";
+        width: 0px;
+        margin-left: 0px; }
+      nav li:after {
+        content: ' ';
+        display: inline-block;
+        height: 15px;
+        width: 3px;
+        background-color: #16DDA4; } }
 
 /*# sourceMappingURL=style.css.map */
