--- a/stylesheets/layout_1px.scss
+++ b/stylesheets/layout_1px.scss
@@ -1,4 +1,4 @@
-$green: #16DDA4;
+
 @mixin clearfix {
   &::after {
     clear: both;
@@ -9,21 +9,21 @@ $green: #16DDA4;
 header {
   @include clearfix;
 }
-.logo { 
+.logo {
   float: left;
 }
 .hero {
-  @include span-columns(12); 
+  @include span-columns(12);
 // need help making background size bigger
   background-image: url("../images/tech_jobs_academy_demo.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   padding-top: 15%;
 
-  p h1 { @include span-columns(12); } 
+  p h1 { @include span-columns(12); }
   h1 {color: white;}
 
-  .hero-blurb { 
+  .hero-blurb {
     @include outer-container;
     text-align: center;
     padding-right: 20%;
@@ -31,8 +31,8 @@ header {
     padding-bottom: 75px;
   }
 }
-.image-blurb { 
-  @include span-columns(6); 
+.image-blurb {
+  @include span-columns(6);
   @include omega(2n);
   text-align: center;
 }
@@ -47,44 +47,44 @@ button {
   width: 200px;
 }
 section {
-  @include outer-container; 
+  @include outer-container;
   max-width: 58em;
+  padding: 30px;
 }
 h1, h2 {
   text-align: center;
 }
-p {
-  margin-left: 4px;
-  margin-right: 30px;
- /* text-align: center;*/
+.overview p {
+  text-align: center;
+  font-weight: 100;
+  margin-bottom: 50px;
 }
 .eligibility {
   @include span-columns(12);
   h3 {
     text-align: center;
   }
-  ul li { 
+  ul { padding-left: 0px; }
+  ul li {
     margin-left: 40px;
-    margin-right: 70px;
     padding-bottom: 30px;
-  } 
+  }
   p {
     margin-left: 42px;
     margin-right: 20px;
     text-align: center;
   }
+  .apply-button { text-align: center; }
   .long-button {
-    margin-top: 18px;
     padding-right:10px;
     padding-left:10px;
-    margin-left: 102px;
   }
 }
 .application-steps {
-  @include span-columns(12);  
+  @include row();
 }
 .mail-signup #mc_embed_signup #input-box input[type="email"] {
-  font-family: $font; 
+  font-family: $font;
   font-size: modular-scale(0);
   display: block;
   margin: 0;
@@ -111,7 +111,7 @@ p {
   text-decoration:none;
   border: none;
   bottom: 1000px;
-  margin-top: 4.5px; 
+  margin-top: 4.5px;
   margin-right: -11px;
 }
 footer {
