--- a/stylesheets/layout_1px.scss
+++ b/stylesheets/layout_1px.scss
@@ -16,7 +16,7 @@ header {
 // need help making background size bigger
   background-image: url("../images/tech_jobs_academy_demo.jpg");
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 600px;
   padding-top: 15%;
 
   p h1 { @include span-columns(12); }
